<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".view.DashboardFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dashboard_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dashboard_welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/dashboard_welcome_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text=""
                android:textSize="20sp"
                tools:layout_editor_absoluteX="271dp"
                tools:layout_editor_absoluteY="16dp"
                tools:text="@tools:sample/first_names" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            s

            <LinearLayout
                android:id="@+id/checkpointList"
                style="@style/dashboard_item_style"
                android:layout_height="141dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="@+id/showCheckpointSchedule"
                app:layout_constraintTop_toBottomOf="@+id/showCheckpointSchedule">

                <TextView
                    android:id="@+id/check_list_icon"
                    android:layout_width="41dp"
                    android:layout_height="46dp"
                    android:background="@drawable/ic_baseline_list_alt_24" />

                <TextView
                    android:id="@+id/check_list_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_checkpoint_list_text"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/showUsersList"
                style="@style/dashboard_item_style"
                android:layout_height="141dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/showCheckpointSchedule"
                app:layout_constraintTop_toBottomOf="@+id/addCheckpoint">

                <TextView
                    android:id="@+id/user_list_icon"
                    android:layout_width="41dp"
                    android:layout_height="46dp"
                    android:background="@drawable/users_list" />

                <TextView
                    android:id="@+id/user_list_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_user_list_text"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/showCheckpointSchedule"
                style="@style/dashboard_item_style"
                android:layout_height="141dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/showUsersList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addPersonal">

                <TextView
                    android:id="@+id/list_icon"
                    android:layout_width="41dp"
                    android:layout_height="46dp"
                    android:background="@drawable/schedule" />

                <TextView
                    android:id="@+id/list_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_schedule_history_checkpoint_text"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addCheckpoint"
                style="@style/dashboard_item_style"
                android:layout_height="141dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/showUsersList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/addPersonal"
                app:layout_constraintTop_toTopOf="@+id/addPersonal">

                <TextView
                    android:id="@+id/checkpoint_icon"
                    android:layout_width="41dp"
                    android:layout_height="46dp"
                    android:background="@drawable/ic_baseline_pin_drop_24" />

                <TextView
                    android:id="@+id/checkpoint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_add_checkpoint_text"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addPersonal"
                style="@style/dashboard_item_style"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/showCheckpointSchedule"
                app:layout_constraintEnd_toStartOf="@+id/addCheckpoint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/user_icon"
                    android:layout_width="41dp"
                    android:layout_height="46dp"
                    android:background="@drawable/add_personal" />

                <TextView
                    android:id="@+id/user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_add_user_text" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>